# ToDo-app

./: .gitignore  Makefile  README.md  docker-compose.yml
backend Todo/: db.sqlite3
backend Todo/notes/: serializers.py  views.py
backend Todo/notes/migrations/: 0001_initial.py  0003_alter_note_due_date_alter_note_list.py
backend Todo/todo_backend/: asgi.py  wsgi.py
frontend Todo/frontend todo/: index.html  package-lock.json  package.json
frontend Todo/frontend todo/src/: main.js
frontend Todo/frontend todo/src/assets/: main.css
frontend Todo/frontend todo/src/router/: index.js
src/backend/: Dockerfile  README.md  pyproject.toml
src/backend/notes/: admin.py  models.py
src/backend/notes/migrations/: 0002_alter_note_due_date.py
src/backend/todo_backend/: settings.py  urls.py
src/frontend/: Dockerfile  README.md
src/frontend/src/: App.vue
